[package]
name = "roas"
version = "0.1.0"
authors = ["Gaunsessa <0167623@schoolsnet.act.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aos_packet_derive = { path = "aos_packet_derive" }
enet-sys = "0.2.2"
libflate = "1"